# Docx2Shelf

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_REFACTORING_PHASE1.md  CLI_REFACTORING_PLAN.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  DISTRIBUTION.md  Dockerfile  FINAL_RELEASE_SUMMARY.md  GEMINI.md  GITHUB_RELEASE_INSTRUCTIONS.md  ICON_GUIDELINES.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.md  RELEASE_NOTES_v2.1.8.md  ROADMAP.md  UI_DESIGN_ASSESSMENT.md  WEB_INTERFACE_GUIDE.md  WORKFLOWS.md  action.yml  api-spec.yaml  build_config.py  build_nuitka.py  docx2shelf.manifest  docx2shelf_gui.spec  github_release_steps.txt  install  install.bat  install.sh  install_enhanced.bat  install_fixed.bat  install_simple.bat  mkdocs.yml  prompt.txt  pyproject.toml  pytest.ini  (+7 more)
.claude/: settings.local.json
.github/scripts/: compute_version.py  set_pyproject_version.py
.github/workflows/: automated-release.yml  build-and-release.yml  build-release.yml  ci.yml  docker.yml  publish-pypi.yml  release-build.yml  release-on-tag.yml  release.yml  secure-release.yml  test-action.yml  test-installers.yml
Portable_Distribution/: Docx2Shelf
Portable_Distribution/_internal/docx2shelf/: __init__.py  accessibility_audit.py  ai_genre_detection.py  ai_integration.py  ai_metadata.py  batch.py  bisac.py  cli.py  content_security.py  documentation.py  ecosystem.py  enhanced_images.py  error_handler.py  figures.py  gui_main.py  i18n.py  images.py  indexing.py  interactive_cli.py  marketplace.py  math_handler.py  media_overlays.py  monitoring.py  notes.py  path_utils.py  plugin_marketplace.py  plugin_types.py  preview.py  quality_scoring.py  security.py  settings.py  smart_toc.py  store_profiles.py  testing.py  themes.py  update.py  validation.py  version.py  web_builder.py  wizard.py
Portable_Distribution/_internal/docx2shelf/assets/css/: __init__.py  academic.css  biography.css  (+6 more)
Portable_Distribution/_internal/docx2shelf/gui/: modern_app.py
Portable_Distribution/_internal/docx2shelf/templates/: __init__.py  title.xhtml
docs/: QUALITY_COOKBOOK.md  RELEASE_PROCESS.md  TESTING.md
docs/plugins/: README.md
docs/plugins/examples/: basic_template.py  html_cleaner.py  metadata_enhancer.py
docs/templates/metadata/: README.md  apple-books-metadata.txt  draft2digital-metadata.txt  indie-author-metadata.txt  kdp-metadata.txt  kobo-metadata.txt  smashwords-metadata.txt
docs/themes/: README.md
docs/themes/gallery/: romance.css  technical.css
downloads/installers-appimage/: uninstall-docx2shelf.sh
helm/docx2shelf/: Chart.yaml  values.yaml
helm/docx2shelf/templates/: _helpers.tpl  deployment.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
packaging/: README.md  docx2shelf.spec
packaging/homebrew/: docx2shelf.rb
packaging/scoop/: docx2shelf.json
packaging/winget/: docx2shelf.yaml
plugins/marketplace/anthology_builder/: __init__.py  plugin.json  plugin.py
plugins/marketplace/store_profiles/: __init__.py  plugin.json  plugin.py
plugins/marketplace/web_builder/: __init__.py
release-assets/: MD5SUMS.txt  SHA256SUMS.txt
scripts/: bench_conversion.py  build_local.py  create_offline_installer.py  diagnose.bat  generate_golden_fixtures.py  install.bat  install.ps1  install.sh  quick-release.sh  release.py  run_tests.py  test.ps1  test.sh  test_golden_files.py  test_installers.py  uninstall.ps1  uninstall.sh  validate_installation.py
src/docx2shelf/: __init__.py  accessibility.py  accessibility_audit.py  ai_accessibility.py  ai_chapter_detection.py  ai_genre_detection.py  ai_integration.py  ai_metadata.py  anthology.py  assemble.py  batch.py  bisac.py  cli.py  cli_build.py  cli_prompts.py  community.py  connectors.py  content_security.py  content_validation.py  convert.py  crossrefs.py  developer_tools.py  documentation.py  ecosystem.py  enhanced_images.py  enterprise.py  enterprise_api.py  epub_chapters.py  epub_css.py  epub_metadata.py  epub_navigation.py  epub_pages.py  epub_resources.py  error_handler.py  figures.py  fonts.py  formats.py  free_ai_service.py  gui_main.py  i18n.py  (+43 more)
src/docx2shelf/assets/: __init__.py
src/docx2shelf/assets/css/: __init__.py  childrens.css  contemporary.css  dyslexic.css  mystery.css  night.css  printlike.css  sans.css  serif.css
src/docx2shelf/cli_args/: __init__.py  ai.py  build.py  connectors.py  docx.py  enterprise.py  misc.py  plugins.py  themes.py  tools.py
src/docx2shelf/cli_handlers/: __init__.py  ai.py  batch.py  build.py  conversion.py  docx.py  enterprise.py  plugins.py  profiles.py  prompts.py  quality.py  themes.py  tools.py  utils.py  watch.py
src/docx2shelf/gui/: __init__.py  app.py  launcher.py  modern_app.py
src/docx2shelf/plugin_templates/: basic_template.py  html_cleaner.py  metadata_enhancer.py
src/docx2shelf/templates/: __init__.py  cover.xhtml  nav.xhtml  ncx.xml
tests/: conftest.py  test_chapter_starts.py  test_convert_split.py  test_golden_epubs.py  test_metadata.py  test_property_based.py  test_quality_assurance.py  test_reader_smoke.py  test_v124_features.py  test_v125_comprehensive.py  test_v126_comprehensive.py  test_v127_features.py  test_v128_features.py  test_v12_features.py
tests/fixtures/: cross_refs_test.html  figures_tables_test.html  indexing_test.html  notes_test.html
tests/fixtures/golden_epubs/footnotes/: expected_structure.json  footnotes.html
tests/fixtures/golden_epubs/images/: expected_structure.json  images.html
tests/fixtures/golden_epubs/poetry/: expected_structure.json  poetry.html
tests/fixtures/golden_epubs/simple/: expected_structure.json  simple.html
tests/fixtures/golden_epubs/tables/: expected_structure.json  tables.html
tmp/: cli_full.txt  cli_numbered.txt  dedication.txt  manuscript.docx  metadata.txt
tmp/extras/: book.css
web/: index.html
web/js/: app.js  epub-generator.js
web/js/ai/: web-llm-client.js
